--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <!-- Awal Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light shadow-sm" style="background-color: #ffffff">
+    <nav class="navbar navbar-expand-lg navbar-light shadow-sm fixed-top" style="background-color: #ffffff">
       <div class="container">
         <a class="navbar-brand" href="#">E-Undangan</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -66,6 +66,57 @@
       </svg>
     </section>
     <!-- Akhir Jumbotron -->
+    <section id="desain">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col">
+            <h2>Desain</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-3 mb-3">
+            <div class="card">
+              <img src="img/desain/pernikahan.jpg" class="card-img-top" alt="udanganpernikahan" />
+              <div class="card-body">
+                <h5 class="card-title">Undangan Pernikahan</h5>
+                <p class="card-text">Buka desain untuk memilih tema yang kalian inginkan.</p>
+                <a href="#" class="btn btn-primary">Buka Desain</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 mb-3">
+            <div class="card">
+              <img src="img/desain/aqiqah.jpg" class="card-img-top" alt="udanganaqiqah" />
+              <div class="card-body">
+                <h5 class="card-title">Undangan Aqiqah</h5>
+                <p class="card-text">Buka desain untuk memilih tema yang kalian inginkan.</p>
+                <a href="#" class="btn btn-primary">Buka Desain</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 mb-3">
+            <div class="card">
+              <img src="img/desain/ulangtahun.jpg" class="card-img-top" alt="udanganulangtahun" />
+              <div class="card-body">
+                <h5 class="card-title">Undangan Ulang Tahun</h5>
+                <p class="card-text">Buka desain untuk memilih tema yang kalian inginkan.</p>
+                <a href="#" class="btn btn-primary">Buka Desain</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 mb-3">
+            <div class="card">
+              <img src="img/desain/khitanan.jpg" class="card-img-top" alt="udangankhitanan" />
+              <div class="card-body">
+                <h5 class="card-title">Undangan Khitanan</h5>
+                <p class="card-text">Buka desain untuk memilih tema yang kalian inginkan.</p>
+                <a href="#" class="btn btn-primary">Buka Desain</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Awal Desain -->
     <section class="desain"></section>
     <!-- Akhir Desain -->
