--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
       </svg>
     </section>
     <!-- Akhir Jumbotron -->
+
+    <!-- Awal Desain -->
     <section id="desain">
       <div class="container">
         <div class="row text-center mb-3">
@@ -116,10 +118,118 @@
           </div>
         </div>
       </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#ffffff"
+          fill-opacity="1"
+          d="M0,288L30,266.7C60,245,120,203,180,170.7C240,139,300,117,360,101.3C420,85,480,75,540,90.7C600,107,660,149,720,170.7C780,192,840,192,900,165.3C960,139,1020,85,1080,101.3C1140,117,1200,203,1260,213.3C1320,224,1380,160,1410,128L1440,96L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"
+        ></path>
+      </svg>
     </section>
-    <!-- Awal Desain -->
-    <section class="desain"></section>
     <!-- Akhir Desain -->
+
+    <!-- Awal Fitur -->
+    <section>
+    <div class="container px-4 py-0" id="icon-grid">
+    <h2 class="text-center">Fitur</h2>
+
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-3">
+      <div class="col d-flex align-items-start">
+        <img src="img/fitur/icon/person.svg" alt="informasi_profil" class="bi text-muted flex-shrink-0 me-3" width="40px">
+        <div>
+          <h4 class="card-title">Informasi Profil</h4>
+          <p>Pada bagian ini kamu dapat memberikan Informasi penting dari isi undanganmu seperti data diri, foto, dll.</p>
+        </div>
+      </div>
+      <div class="col d-flex align-items-start">
+        <img src="img/fitur/icon/calendar-heart.svg" alt="informasi_acara" class="bi text-muted flex-shrink-0 me-3" width="40px">
+        <div>
+          <h4 class="card-title">Informasi Acara</h4>
+          <p>Disini kamu dapat menampilkan detail acara seperti informasi waktu, tanggal, hari, dan lokasi acara spesialmu.</p>
+        </div>
+      </div>
+      <div class="col d-flex align-items-start">
+        <img src="img/fitur/icon/geo-alt.svg" alt="informasi_lokasi" class="bi text-muted flex-shrink-0 me-3" width="40px">
+        <div>
+          <h4 class="card-title">Informasi Lokasi</h4>
+          <p>Agar mempermudah tamu datang ke lokasi yuk bantu tamu undangan menemukan lokasi acaramu seakurat Google Maps.</p>
+        </div>
+      </div>
+      <div class="col d-flex align-items-start">
+        <img src="img/fitur/icon/alarm.svg" alt="countdown" class="bi text-muted flex-shrink-0 me-3" width="40px">
+        <div>
+          <h4 class="card-title">Hitung Mundur</h4>
+          <p>Tinggal H- berapa nih? Yuk Ingatkan para tamu datang di acara spesialmu untuk melihat moment kebahagiaanmu.</p>
+        </div>
+      </div>
+      <div class="col d-flex align-items-start">
+        <img src="img/fitur/icon/envelope-paper-heart.svg" alt="amplop_digital" class="bi text-muted flex-shrink-0 me-3" width="40px">
+        <div>
+          <h4 class="card-title">Amplop Digital</h4>
+          <p>Kini tamu undangan bisa mengirimkan hadiah & amplop digital dengan berbagai metode pembayaran ( Gopay, Dana, dll) wah sangat mudah bukan?!</p>
+        </div>
+      </div>
+      <div class="col d-flex align-items-start">
+        <img src="img/fitur/icon/images.svg" alt="galeri_foto" class="bi text-muted flex-shrink-0 me-3" width="40px">
+        <div>
+          <h4 class="card-title">Galeri Foto</h4>
+          <p>Bagikan momen terindah di acara spesialmu dengan foto-foto bersama pasangan atau bahkan foto bersama keluarga tercintamu.</p>
+        </div>
+      </div>
+      <div class="col d-flex align-items-start">
+        <img src="img/fitur/icon/book.svg" alt="buku_tamu" class="bi text-muted flex-shrink-0 me-3" width="40px">
+        <div>
+          <h4 class="card-title">Buku Tamu</h4>
+          <p>Beri tempat untuk para tamu undangan agar bisa memberikan ucapan, doa dan harapan di buku tamu ini. Dan kamu bisa melihat dan membaca ucapan yang masuk di undanganmu loh.</p>
+        </div>
+      </div>
+      <div class="col d-flex align-items-start">
+        <img src="img/fitur/icon/music-note-beamed.svg" alt="music" class="bi text-muted flex-shrink-0 me-3" width="40px">
+        <div>
+          <h4 class="card-title">Musik</h4>
+          <p>Buatlah undangan acara spesialmu semenarik mungkin dengan suara musik latar yang merdu dan indah. Kamu bisa menggunakan musik dari cover para youtuber loh.</p>
+        </div>
+      </div>
+    </section>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#f3f4f5" fill-opacity="1" d="M0,96L40,85.3C80,75,160,53,240,53.3C320,53,400,75,480,117.3C560,160,640,224,720,229.3C800,235,880,181,960,170.7C1040,160,1120,192,1200,176C1280,160,1360,96,1400,64L1440,32L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path></svg>
+    <!-- Akhir Fitur -->
+
+    <!-- Awal Fasilitas -->
+      <section id="fasilitas">
+        <div class="container px-4 py-0">
+          <h2 class="text-center">Fasilitas</h2>
+          <div class="row g-4 py-3 row-cols-1 row-cols-lg-3">
+            <div class="col d-flex align-items-start">
+              <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
+              <img src="img/fasilitas/link.svg" alt="link" width="40px" style="background-color: #f3f4f5;">
+              </div>
+              <div>
+                <h4 class="card-title">Link Web Undangan</h4>
+                <p>Kamu akan mendapatkan link web undangan yang siap disebar ke banyak orang di media sosial, seperti
+                  https://e-undangan.com/item-nama.</p>
+              </div>
+            </div>
+            <div class="col d-flex align-items-start">
+              <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
+              <img src="img/fasilitas/link.svg" alt="link" width="40px" style="background-color: #f3f4f5;">
+              </div>
+              <div>
+                <h4 class="card-title">Referensi Kalimat Pada Undangan Anda</h4>
+                <p>Kamu tidak perlu bingung bagaimana cara menyusun kalimat untuk berbagi undangan. Kami akan memberikan referensi kalimat yang bisa kamu coba.</p>
+              </div>
+            </div>
+            <div class="col d-flex align-items-start">
+              <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
+              <img src="img/fasilitas/link.svg" alt="link" width="40px" style="background-color: #f3f4f5;">
+              </div>
+              <div>
+                <h4 class="card-title">Layanan Revisi</h4>
+                <p>Kamu tidak perlu khawatir jika ada data informasi yang kurang, salah atau keliru. Kami akan mengubahnya dengan segera tanpa dikenakan biaya tambahan.</p>
+              </div>
+            </div>
+      </section>
+    <!-- Akhir Fasilitas -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
