--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
 
+    <link href="pricing.css" rel="stylesheet" />
+
     <title>E-Undangan | Undangan Online</title>
   </head>
   <body>
@@ -228,7 +230,120 @@
               </div>
             </div>
       </section>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#f3f4f5" fill-opacity="1" d="M0,128L48,133.3C96,139,192,149,288,170.7C384,192,480,224,576,208C672,192,768,128,864,122.7C960,117,1056,171,1152,197.3C1248,224,1344,224,1392,224L1440,224L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
     <!-- Akhir Fasilitas -->
+
+    <!-- Awal Harga -->
+
+<section id="harga">
+  
+  <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
+    <h2 class="card-title">Harga</h2>
+    <p class="fs-5 text-muted">Beragam pilihan paket yang dapat disesuaikan dengan acara kalian !!!</p>
+  </div>
+
+  <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+    <div class="col">
+      <div class="card mb-4 rounded-3 shadow-sm">
+        <div class="card-header py-3">
+          <h4 class="my-0 fw-normal">Silver</h4>
+        </div>
+        <div class="card-body">
+          <h1 class="card-title pricing-card-title">99k</h1>
+          <ul class="list-unstyled mt-3 mb-4">
+            <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Desain Sesuai Tema</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light">Subdomain</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Informasi Profil Mempelai</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light">Informasi Acara</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Countdown Timer</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light">Kalender Pengingat</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-dark text-decoration-line-through">Galeri Foto (Max. 5 Foto)</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light">Informasi Lokasi</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Protokol Kesehatan</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light text-decoration-line-through">Buku Tamu</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-dark text-decoration-line-through">Konfirmasi Kehadiran</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light text-decoration-line-through">RSVP</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Music Backsound</a>
+          </ul>
+          <button type="button" class="btn btn-primary">Pesan</button>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card mb-4 rounded-3 shadow-sm">
+        <div class="card-header py-3 text-white" style="background-color: rgb(236, 201, 0);">
+          <h4 class="my-0 fw-normal">Gold</h4>
+        </div>
+        <div class="card-body">
+          <h1 class="card-title pricing-card-title">129k</h1>
+          <ul class="list-unstyled mt-3 mb-4">
+            <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Desain Sesuai Tema</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light">Subdomain</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Informasi Profil Mempelai</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light">Informasi Acara</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Countdown Timer</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light">Kalender Pengingat</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-dark text-decoration-line-through">Galeri Foto (Max. 5 Foto)</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light">Informasi Lokasi</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Protokol Kesehatan</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light">Buku Tamu</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-dark text-decoration-line-through">Konfirmasi Kehadiran</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light">RSVP</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Music Backsound</a>
+          </ul>
+          <button type="button" class="btn btn-primary">Pesan</button>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card mb-4 rounded-3 shadow-sm">
+        <div class="card-header py-3">
+          <h4 class="my-0 fw-normal">Platinum</h4>
+        </div>
+        <div class="card-body">
+          <h1 class="card-title pricing-card-title">149k</h1>
+          <ul class="list-unstyled mt-3 mb-4">
+            <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Desain Sesuai Tema</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light">Subdomain</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Informasi Profil Mempelai</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light">Informasi Acara</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Countdown Timer</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light">Kalender Pengingat</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Galeri Foto (Max. 5 Foto)</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light">Informasi Lokasi</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Protokol Kesehatan</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light">Buku Tamu</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Konfirmasi Kehadiran</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light">RSVP</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Music Backsound</a>
+          </ul>
+          <button type="button" class="btn btn-primary">Pesan</button>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card mb-4 rounded-3 shadow-sm">
+        <div class="card-header py-3">
+          <h4 class="my-0 fw-normal">Add-On</h4>
+        </div>
+        <div class="card-body">
+          <h1 class="card-title pricing-card-title">15k</h1>
+          <ul class="list-unstyled mt-3 mb-4">
+            <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Amplop Digital</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light">Extra Galeri Foto</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Galeri Video</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-light">Cerita Perjalanan Mempelai</a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-dark">Extra Revisi</a>
+          </ul>
+          <button type="button" class="btn btn-primary">Pesan</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</section>
+
+    <!-- Akhir Harga -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
