Menambahkan cara pemesanan

--- a/index.html
+++ b/index.html
@@ -340,10 +340,73 @@
       </div>
     </div>
   </div>
-
 </section>
-
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#f3f4f5" fill-opacity="1" d="M0,320L48,320C96,320,192,320,288,309.3C384,299,480,277,576,245.3C672,213,768,171,864,176C960,181,1056,235,1152,245.3C1248,256,1344,224,1392,208L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
     <!-- Akhir Harga -->
+
+    <!-- Awal Cara Pemesanan -->
+    <section id="pemesanan">
+        <div class="container px-4 py-0" style="max-width: 700px;">
+          <h2 class="text-center">Cara Pemesanan</h2>
+          <p class="fs-5 text-muted text-center">Berikut tutorial cara pemesanan undangan yang kamu inginkan!</p>
+          <div class="row g-0 py-1 row-cols-1 row-cols-lg-1">
+            <div class="col d-flex align-items-start">
+              <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
+              <img src="img/cara_pemesanan/11.svg" alt="link" width="40px" style="background-color: #f3f4f5;">
+              </div>
+              <div>
+                <h4 class="card-title">Pesan Sekarang</h4>
+                <p>Ketika kamu klik tombol <b>Pesan Sekarang</b> maka kamu akan diarahkan ke menu <b>Desain</b> untuk memilih jenis undangan atau desain yang kamu inginkan.</p>
+              </div>
+            </div>
+            <div class="col d-flex align-items-start">
+              <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
+              <img src="img/cara_pemesanan/22.svg" alt="referensi" width="40px" style="background-color: #f3f4f5;">
+              </div>
+              <div>
+                <h4 class="card-title">Desain</h4>
+                <p>Setelah kamu memilih jenis undangan atau desain tema yang sesuai dengan kebutuhan dan keinginan kalian, kemudian klik tombol <b>Pesan</b> dan kamu akan diarahkan ke aplikasi whatsapp.</p>
+              </div>
+            </div>
+            <div class="col d-flex align-items-start">
+              <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
+              <img src="img/cara_pemesanan/3.svg" alt="revisi" width="40px" style="background-color: #f3f4f5;">
+              </div>
+              <div>
+                <h4 class="card-title">Whatsapp</h4>
+                <p>Pada tahap ini kamu diminta untuk mengisi form pemesanan sesuai data informasi mempelai. Kemudian lakukan pembayaran lalu kirim bukti pembayaran tersebut.</p>
+              </div>
+            </div>
+            <div class="col d-flex align-items-start">
+              <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
+              <img src="img/cara_pemesanan/4.svg" alt="revisi" width="40px" style="background-color: #f3f4f5;">
+              </div>
+              <div>
+                <h4 class="card-title">Proses Pengerjaan</h4>
+                <p>Untuk proses pengerjaan dilakukan sekitar 2-3 hari setelah pembayaran diverifikasi.</p>
+              </div>
+            </div>
+            <div class="col d-flex align-items-start">
+              <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
+              <img src="img/cara_pemesanan/5.svg" alt="revisi" width="40px" style="background-color: #f3f4f5;">
+              </div>
+              <div>
+                <h4 class="card-title">Konsultasi Pengerjaan Undangan</h4>
+                <p>Setelah undangan selesai maka admin akan mengirim link website undangan tersebut melalui whatsapp. Pada tahap ini mohon kamu untuk periksa apakah data sudah benar atau belum. Jika terdapat kesalahan data maka segera kami revisi.</p>
+                <p class="text-muted">Catatan: Revisi hanya kami terima 1x saja. Maka dari itu cek data kamu dengan teliti, lebih dari 1x kami menyediakan paket Add-On untuk Extra Revisi.</p>
+              </div>
+            </div>
+            <div class="col d-flex align-items-start">
+              <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
+              <img src="img/cara_pemesanan/6.svg" alt="revisi" width="40px" style="background-color: #f3f4f5;">
+              </div>
+              <div>
+                <h4 class="card-title">Undangan Selesai</h4>
+                <p>Admin akan mengirimkan link undangan yang sudah di revisi sebelumnya dan undangan kamu siap dibagikan.</p>
+              </div>
+            </div>
+      </section>
+    <!-- Akhir Cara Pemesanan -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
